# SO2

./: README.md
TP1/: .gitignore  CMakeLists.txt  Makefile  updated_client
TP1/doxygen/html/: annotated.html  archfunc_8c.html  archfunc_8c__incl.map  archfunc_8c__incl.md5  archfunc_8h.html  archfunc_8h__dep__incl.map  archfunc_8h__dep__incl.md5  archfunc_8h__incl.map  archfunc_8h__incl.md5  archfunc_8h_source.html  baash_2main_8c.html  baash_2main_8c__incl.map  baash_2main_8c__incl.md5  classes.html  client_2main_8c.html  client_2main_8c__incl.map  client_2main_8c__incl.md5  dir_075bb3ff235063c77951cd176d15a741.html  dir_12316992d12d45b6562943338383b514.html  dir_18a4d8b064e4d373b165a75fe8893ab3.html  dir_389a8de78ec0af90f2ea08e507753ab9.html  dir_3d441b6012196897f3853c15d2b17da2.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  evalfunc_8c.html  (+24 more)
TP2/: .gitignore  CMakeLists.txt  Makefile  README.md
TP2/data/: plot_all.gnu  plot_openmp.gnu  plot_procedural.gnu  tiempos_omp_16.txt  tiempos_omp_16_cluster.txt  tiempos_omp_2.txt  tiempos_omp_2_cluster.txt  tiempos_omp_32.txt  tiempos_omp_32_cluster.txt  tiempos_omp_4.txt  tiempos_omp_4_cluster.txt  tiempos_omp_8.txt  tiempos_omp_8_cluster.txt  tiempos_openmp.txt  tiempos_openmp_16t.txt  tiempos_openmp_4t.txt  tiempos_openmp_8t.txt  tiempos_openmp_pulqui.txt  tiempos_openmp_pulqui_16t.txt  tiempos_openmp_pulqui_4t.txt  tiempos_openmp_pulqui_8t.txt  tiempos_procedural.txt  tiempos_procedural_cluster.txt  tiempos_procedural_pulqui.txt
TP2/doxygen/: doxyfile
TP2/includes/: run_30_times.sh
TP2/src/: main.c  main.py
(+289 files in other folders)
